MOD: Renamed cranberry_gfx to cranberry_gfx_backend. Planning on adding a front end when the backend is comprehensive enough.

--- a/Project/GFX/GFX/GFX.vcxproj.filters
+++ b/Project/GFX/GFX/GFX.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\Source\cranberry_gfx.h">
+    <ClInclude Include="..\..\..\Source\cranberry_gfx_backend.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
