--- a/Project/GFX/GFX/GFX.vcxproj
+++ b/Project/GFX/GFX/GFX.vcxproj
@@ -138,7 +138,7 @@
     <ClCompile Include="..\..\..\Source\main.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\Source\cranberry_gfx.h" />
+    <ClInclude Include="..\..\..\Source\cranberry_gfx_backend.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
